testdata/golden/sema/valid/compare_arm_nested_return.sg
fn main(flag: bool) -> int {
    return compare flag {
        true => {
            if flag {
                return 1;
            } else {
                return 2;
            }
        }
        false => 3
    };
}
