testdata/golden/sema/invalid/arith_mixed_int_int8.sg
fn main() -> int {
    let a: int = 1;
    let b: int8 = 2;
    let _ = a + b;
    return 0;
}
